Fix overlapping suggestions

--- a/web/src/search/input/QueryInput.scss
+++ b/web/src/search/input/QueryInput.scss
@@ -3,7 +3,6 @@
 .query-input2 {
     flex: 1 1 auto;
     position: relative;
-    border: 1px solid $input-border-color;
 
     // The size of the toggle icons in the query input
     $toggle-icon-width: 24px;
@@ -12,7 +11,6 @@
         // Right side is flush with SearchButton.
         border-top-right-radius: 0;
         border-bottom-right-radius: 0;
-        border: none;
         // Padding added so that the input value does not overlap with the toggle buttons.
         // The padding should be calculated by the width of an icon width * number of icons + 0.25rem.
         padding-right: calc(#{$toggle-icon-width} + 0.25rem);
